@@ -404,23 +404,6 @@ struct synthv1_ctl
 };
 
 
-// internal control
-
-struct synthv1_aux
-{
-	synthv1_aux() { reset(); }
-
-	void reset()
-	{
-		panning = 0.0f;
-		volume = 1.0f;
-	}
-
-	float panning;
-	float volume;
-};
-
-
 // dco
 
 struct synthv1_dco
@@ -641,11 +624,33 @@ private:
 
 // balancing smoother (1 parameter)
 
-class synthv1_bal : public synthv1_ramp2
+class synthv1_bal1 : public synthv1_ramp1
 {
 public:
 
-	synthv1_bal() : synthv1_ramp2(2) {}
+	synthv1_bal1() : synthv1_ramp1(2) {}
+
+protected:
+
+	float evaluate(uint16_t i)
+	{
+		synthv1_ramp1::update();
+
+		const float wbal = 0.25f * M_PI
+			* (1.0f + m_param1_v);
+
+		return M_SQRT2 * (i & 1 ? ::sinf(wbal) : ::cosf(wbal));
+	}
+};
+
+
+// balancing smoother (2 parameters)
+
+class synthv1_bal2 : public synthv1_ramp2
+{
+public:
+
+	synthv1_bal2() : synthv1_ramp2(2) {}
 
 protected:
 
@@ -657,31 +662,7 @@ protected:
 			* (1.0f + m_param1_v)
 			* (1.0f + m_param2_v);
 
-		return M_SQRT2 * (i == 0 ? ::cosf(wbal) : ::sinf(wbal));
-	}
-};
-
-
-// panning smoother (3 parameters)
-
-class synthv1_pan : public synthv1_ramp3
-{
-public:
-
-	synthv1_pan() : synthv1_ramp3(2) {}
-
-protected:
-
-	float evaluate(uint16_t i)
-	{
-		synthv1_ramp3::update();
-
-		const float wpan = 0.25f * M_PI
-			* (1.0f + m_param1_v)
-			* (1.0f + m_param2_v)
-			* (1.0f + m_param3_v);
-
-		return M_SQRT2 * (i == 0 ? ::cosf(wpan) : ::sinf(wpan));
+		return M_SQRT2 * (i & 1 ? ::sinf(wbal) : ::cosf(wbal));
 	}
 };
 
@@ -759,9 +740,9 @@ struct synthv1_voice : public synthv1_list<synthv1_voice>
 
 	float lfo1_sample, lfo2_sample;
 
-	synthv1_bal dco1_bal, dco2_bal;				// oscillators balance
-
 	float dco1_balance, dco2_balance;
+
+	synthv1_bal2 dco1_bal, dco2_bal;			// oscillators balance
 
 	synthv1_filter1 dcf11, dcf12, dcf21, dcf22;	// filters
 	synthv1_filter2 dcf13, dcf14, dcf23, dcf24;
@@ -776,6 +757,12 @@ struct synthv1_voice : public synthv1_list<synthv1_voice>
 	synthv1_glide dco2_glide1, dco2_glide2;
 
 	synthv1_pre dca1_pre, dca2_pre;
+
+	float out1_panning, out2_panning;
+	float out1_volume, out2_volume;
+
+	synthv1_bal1  out1_pan, out2_pan;			// output panning
+	synthv1_ramp1 out1_vol, out2_vol;			// output volume
 
 	bool sustain1, sustain2;
 };
@@ -952,11 +939,9 @@ private:
 	synthv1_list<synthv1_voice> m_free_list;
 	synthv1_list<synthv1_voice> m_play_list;
 
-	synthv1_aux   m_aux1, m_aux2;
-
 	synthv1_ramp1 m_wid1, m_wid2;
-	synthv1_pan   m_pan1, m_pan2;
-	synthv1_ramp4 m_vol1, m_vol2;
+	synthv1_bal2  m_pan1, m_pan2;
+	synthv1_ramp3 m_vol1, m_vol2;
 
 	float  **m_sfxs;
 	uint32_t m_nsize;
@@ -1293,8 +1278,7 @@ void synthv1_impl::setParamPort ( synthv1::ParamIndex index, float *pfParam )
 		m_vol1.reset(
 			m_out1.volume.value_ptr(),
 			m_dca1.volume.value_ptr(),
-			&m_ctl1.volume,
-			&m_aux1.volume);
+			&m_ctl1.volume);
 		break;
 	case synthv1::OUT1_WIDTH:
 		m_wid1.reset(
@@ -1303,16 +1287,14 @@ void synthv1_impl::setParamPort ( synthv1::ParamIndex index, float *pfParam )
 	case synthv1::OUT1_PANNING:
 		m_pan1.reset(
 			m_out1.panning.value_ptr(),
-			&m_ctl1.panning,
-			&m_aux1.panning);
+			&m_ctl1.panning);
 		break;
 	case synthv1::OUT2_VOLUME:
 	case synthv1::DCA2_VOLUME:
 		m_vol2.reset(
 			m_out2.volume.value_ptr(),
 			m_dca2.volume.value_ptr(),
-			&m_ctl2.volume,
-			&m_aux2.volume);
+			&m_ctl2.volume);
 		break;
 	case synthv1::OUT2_WIDTH:
 		m_wid2.reset(
@@ -1321,8 +1303,7 @@ void synthv1_impl::setParamPort ( synthv1::ParamIndex index, float *pfParam )
 	case synthv1::OUT2_PANNING:
 		m_pan2.reset(
 			m_out2.panning.value_ptr(),
-			&m_ctl2.panning,
-			&m_aux2.panning);
+			&m_ctl2.panning);
 		break;
 	default:
 		break;
@@ -1688,6 +1669,12 @@ void synthv1_impl::process_midi ( uint8_t *data, uint32_t size )
 						= uint32_t(*m_dco1.glide * *m_dco1.glide * m_srate);
 					pv->dco1_glide1.reset(dco1_frames, pv->dco1_freq1);
 					pv->dco1_glide2.reset(dco1_frames, pv->dco1_freq2);
+					// panning
+					pv->out1_panning = 0.0f;
+					pv->out1_pan.reset(&pv->out1_panning);
+					// volume
+					pv->out1_volume = 0.0f;
+					pv->out1_vol.reset(&pv->out1_volume);
 					// sustain
 					pv->sustain1 = false;
 					// allocated
@@ -1763,6 +1750,12 @@ void synthv1_impl::process_midi ( uint8_t *data, uint32_t size )
 					pv->dco2_glide2.reset(dco2_frames, pv->dco2_freq2);
 					// sustain
 					pv->sustain2 = false;
+					// panning
+					pv->out2_panning = 0.0f;
+					pv->out2_pan.reset(&pv->out2_panning);
+					// volume
+					pv->out2_volume = 0.0f;
+					pv->out2_vol.reset(&pv->out2_volume);
 					// allocated
 					m_note2[key] = pv;
 				}
@@ -1968,9 +1961,6 @@ void synthv1_impl::allNotesOff (void)
 	dco2_last1 = 0.0f;
 	dco2_last2 = 0.0f;
 
-	m_aux1.reset();
-	m_aux2.reset();
-
 	m_direct_note = 0;
 }
 
@@ -1990,8 +1980,6 @@ void synthv1_impl::allNotesOff_1 (void)
 
 	dco1_last1 = 0.0f;
 	dco1_last2 = 0.0f;
-
-	m_aux1.reset();
 }
 
 
@@ -2011,8 +1999,6 @@ void synthv1_impl::allNotesOff_2 (void)
 
 	dco2_last1 = 0.0f;
 	dco2_last2 = 0.0f;
-
-	m_aux2.reset();
 }
 
 
@@ -2158,26 +2144,23 @@ void synthv1_impl::reset (void)
 	m_vol1.reset(
 		m_out1.volume.value_ptr(),
 		m_dca1.volume.value_ptr(),
-		&m_ctl1.volume, &m_aux1.volume);
+		&m_ctl1.volume);
 	m_pan1.reset(
 		m_out1.panning.value_ptr(),
-		&m_ctl1.panning,
-		&m_aux1.panning);
+		&m_ctl1.panning);
 	m_wid1.reset(
 		m_out1.width.value_ptr());
 
 	m_vol2.reset(
 		m_out2.volume.value_ptr(),
 		m_dca2.volume.value_ptr(),
-		&m_ctl2.volume,
-		&m_aux2.volume);
+		&m_ctl2.volume);
 	m_pan2.reset(
 		m_out2.panning.value_ptr(),
-		&m_ctl2.panning,
-		&m_aux2.panning);
+		&m_ctl2.panning);
 	m_wid2.reset(
 		m_out2.width.value_ptr());
-	
+
 	// flangers
 	if (m_flanger == NULL)
 		m_flanger = new synthv1_fx_flanger [m_nchannels];
@@ -2279,7 +2262,7 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 	dco2_wave2.reset_test(
 		synthv1_wave::Shape(*m_dco2.shape2),
 		*m_dco2.width2, *m_dco2.bandl2 > 0.0f);
-	
+
 	lfo1_wave.reset_test(
 		synthv1_wave::Shape(*m_lfo1.shape), *m_lfo1.width);
 	lfo2_wave.reset_test(
@@ -2436,24 +2419,30 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				const float mid1 = 0.5f * (mod11 + mod12);
 				const float sid1 = 0.5f * (mod11 - mod12);
 				const float vol1 = vel1 * m_vol1.value(j)
-					* pv->dca1_env.tick();
+					* pv->dca1_env.tick()
+					* pv->out1_vol.value(j);
 
 				const float wid2 = m_wid2.value(j);
 				const float mid2 = 0.5f * (mod21 + mod22);
 				const float sid2 = 0.5f * (mod21 - mod22);
 				const float vol2 = vel2 * m_vol2.value(j)
-					* pv->dca2_env.tick();
+					* pv->dca2_env.tick()
+					* pv->out2_vol.value(j);
 
 				// outputs
 
-				const float out11
-					= vol1 * (mid1 + sid1 * wid1) * m_pan1.value(j, 0);
-				const float out12
-					= vol1 * (mid1 - sid1 * wid1) * m_pan1.value(j, 1);
-				const float out21
-					= vol2 * (mid2 + sid2 * wid2) * m_pan2.value(j, 0);
-				const float out22
-					= vol2 * (mid2 - sid2 * wid2) * m_pan2.value(j, 1);
+				const float out11 = vol1 * (mid1 + sid1 * wid1)
+					* pv->out1_pan.value(j, 0)
+					* m_pan1.value(j, 0);
+				const float out12 = vol1 * (mid1 - sid1 * wid1)
+					* pv->out1_pan.value(j, 1)
+					* m_pan1.value(j, 1);
+				const float out21 = vol2 * (mid2 + sid2 * wid2)
+					* pv->out2_pan.value(j, 0)
+					* m_pan2.value(j, 0);
+				const float out22 = vol2 * (mid2 - sid2 * wid2)
+					* pv->out2_pan.value(j, 1)
+					* m_pan2.value(j, 1);
 
 				for (k = 0; k < m_nchannels; ++k) {
 					const float dry1 = (k & 1 ? out12 : out11);
@@ -2469,10 +2458,10 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				if (j == 0) {
 					pv->dco1_balance = lfo1 * *m_lfo1.balance;
 					pv->dco2_balance = lfo2 * *m_lfo2.balance;
-					m_aux1.panning = lfo1 * *m_lfo1.panning;
-					m_aux1.volume  = lfo1 * *m_lfo1.volume + 1.0f;
-					m_aux2.panning = lfo2 * *m_lfo2.panning;
-					m_aux2.volume  = lfo2 * *m_lfo2.volume + 1.0f;
+					pv->out1_panning = lfo1 * *m_lfo1.panning;
+					pv->out2_panning = lfo2 * *m_lfo2.panning;
+					pv->out1_volume  = lfo1 * *m_lfo1.volume + 1.0f;
+					pv->out2_volume  = lfo2 * *m_lfo2.volume + 1.0f;
 				}
 			}
 
@@ -2485,6 +2474,12 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 
 			pv->dca1_pre.process(ngen);
 			pv->dca2_pre.process(ngen);
+
+			pv->out1_pan.process(ngen);
+			pv->out2_pan.process(ngen);
+
+			pv->out1_vol.process(ngen);
+			pv->out2_vol.process(ngen);
 
 			// envelope countdowns
 
